# ESPresso-Scales

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Main.cpp  main.c
main/Lib/: Wifi.cpp
main/RESTServer/: Server.cpp  Server.hpp
main/Scales/: ScalesEventLoop.cpp  ScalesEventLoop.hpp
main/Scales/HX711/: HX711.cpp  HX711.hpp
main/UI/: LoadingScreen.cpp  LoadingScreen.hpp  ScalesScreen.cpp  ScalesScreen.hpp  Ui.cpp  Ui.hpp
tools/: updater.py
